RHEI - Use classes instead of adding style to ul and li elements directly to avoid multiple components squashing each others' styles

--- a/src/pages/categories/Categories.css
+++ b/src/pages/categories/Categories.css
@@ -1,4 +1,4 @@
-ul {
+.categories-list {
     align-items: center;
     display: flex;
     flex-flow: column wrap;
@@ -7,7 +7,7 @@ ul {
     width: 100%;
 }
 
-li {
+.category-item {
     align-items: center;
     background-color: #062d47;
     border-radius: 1.5rem;
@@ -25,12 +25,12 @@ li {
 }
 
 @media (min-aspect-ratio: 5/4) {
-    ul {
+    .categories-list {
         flex-flow: row wrap;
         justify-content: space-evenly;
     }
 
-    li {
+    .category-item {
         font-size: 4rem;
         width: 30%;
     }
